apps/production/artifactory/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: artifactory
  namespace: artifactory

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`artifactory.local.hejsan.xyz`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: artifactory
          port: http-router
      middlewares:
        - name: artifactory-replace-root
        - name: artifactory-headers
      
    - match: Host(`artifactory.local.hejsan.xyz`) && PathPrefix(`/artifactory`)
      kind: Rule
      services:
        - name: artifactory
          port: http-artifactory
      middlewares:
        - name: artifactory-headers
          namespace: artifactory
  tls:
    secretName: local-hejsan-xyz-tls

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: artifactory-replace-root
  namespace: artifactory
spec:
  redirectRegex:
    regex: "^/$|^/ui$"
    replacement: "/ui/"
    permanent: false

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: artifactory-headers
  namespace: artifactory
spec:
  headers:
    customRequestHeaders:
      X-JFrog-Override-Base-Url: "https://artifactory.local.hejsan.xyz"
      X-Forwarded-Port: "443"
      X-Forwarded-Proto: "https"
      Host: "artifactory.local.hejsan.xyz"
      X-Forwarded-For: "{remoteAddr}"
    customResponseHeaders:
      X-Content-Type-Options: "nosniff"
